--- a/HopeBar/app/src/main/res/layout/activity_main.xml
+++ b/HopeBar/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,50 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:dividerPadding="@dimen/activity_vertical_margin">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
+        android:text="About"
+        android:id="@+id/about" />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="351dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
+        android:clickable="true"
+        android:text="The Bar"
+        android:id="@+id/thebar" />
+
+    <Button
+        android:layout_width="351dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
+        android:text="Impact"
+        android:id="@+id/impact" />
+
+    <Button
+        android:layout_width="353dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
+        android:text="Buy"
+        android:id="@+id/buy" />
+
+    <Button
+        android:layout_width="351dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
+        android:text="Share"
+        android:id="@+id/share" />
+
+    <Button
+        android:layout_width="351dp"
+        android:layout_height="wrap_content"
+        android:paddingBottom="50dp"/>
+</LinearLayout>
