--- a/HopeBar/app/src/main/res/layout/activity_buy.xml
+++ b/HopeBar/app/src/main/res/layout/activity_buy.xml
@@ -3,9 +3,62 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="rachelgully.hopebar.Buy">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Sell">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ll">
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/number"
+                android:layout_height="wrap_content"
+                android:id="@+id/number"/>
 
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                android:id="@+id/no"
+                />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/number"
+                android:layout_height="wrap_content"
+                android:id="@+id/cost"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="@string/cost"
+                android:id="@+id/dollars"
+                android:gravity="center"
+                />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/total"
+                android:layout_height="wrap_content"
+                android:id="@+id/total"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:id="@+id/tbars"
+                android:gravity="center"
+                />
+        </TableRow>
+    </TableLayout>
+
+    <Button
+        android:id="@+id/pay"
+        android:layout_below="@id/ll"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text= "@string/pay" />
 </RelativeLayout>
