--- a/HopeBar/app/src/main/res/layout/activity_main.xml
+++ b/HopeBar/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:orientation="vertical"
-    android:dividerPadding="@dimen/activity_vertical_margin">
+    android:dividerPadding="@dimen/activity_vertical_margin"
+    android:background="#996633">
 
     <ImageButton
         android:layout_width="match_parent"
