--- a/HopeBar/app/src/main/res/layout/activity_purchase.xml
+++ b/HopeBar/app/src/main/res/layout/activity_purchase.xml
@@ -1,80 +1,79 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Sell">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="rachelgully.hopebar.Purchase">
 
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:id="@+id/ll">
+        android:id="@+id/ll1">
         <TableRow>
             <TextView
                 android:layout_width="wrap_content"
-                android:text="@string/number"
+                android:text="@string/tboxes"
                 android:layout_height="wrap_content"
-                android:id="@+id/number"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                />
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:id="@+id/no"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:gravity="center"
-                />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/price"
-                android:layout_height="wrap_content"
-                android:id="@+id/price"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-               />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/cost"
-                android:id="@+id/dollars"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                />
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/boxbars"
-                android:layout_height="wrap_content"
-                android:id="@+id/boxbars"
+                android:id="@+id/boxes"
                 android:textAppearance="?android:attr/textAppearanceLarge"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:id="@+id/nbars"
-                android:text="@string/nbars"
+                android:id="@+id/tboxes"
                 android:gravity="center"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 />
         </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/total"
+                android:layout_height="wrap_content"
+                android:id="@+id/total"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:id="@+id/tbars"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/happy"
+                android:layout_height="wrap_content"
+                android:id="@+id/happy"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
 
-    </TableLayout>
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="@string/tcost"
+                android:layout_height="wrap_content"
+                android:id="@+id/amount"
+                android:textAppearance="?android:attr/textAppearanceLarge"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:id="@+id/tcost"
+                android:gravity="center"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                />
+        </TableRow>
+        </TableLayout>
 
     <Button
-        android:id="@+id/order"
+        android:id="@+id/pay"
+        android:layout_below="@id/ll1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text= "@string/order"
-        />
+        android:text= "@string/pay" />
 
-
-</LinearLayout>
+</RelativeLayout>
