--- a/HopeBar/app/src/main/res/layout/activity_buy.xml
+++ b/HopeBar/app/src/main/res/layout/activity_buy.xml
@@ -6,6 +6,42 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Sell">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Dark Chocolate Almond Crunch"
+        android:layout_height="wrap_content"
+        android:id="@+id/price"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#96402A"
+        android:textStyle="bold"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:text="$75.00"
+        android:id="@+id/dollars"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#F5A95D"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="(SAVE $30 off the single bar price!!)"
+        android:layout_height="wrap_content"
+        android:id="@+id/boxbars"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#F5A95D"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:id="@+id/nbars"
+        android:text="Every Box purchased will be matched with 30 servings of whole-food nutrition for a child in need."
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        />
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -30,44 +66,14 @@
                 android:gravity="center"
                 />
         </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/price"
-                android:layout_height="wrap_content"
-                android:id="@+id/price"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-               />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="@string/cost"
-                android:id="@+id/dollars"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                />
-        </TableRow>
 
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/boxbars"
-                android:layout_height="wrap_content"
-                android:id="@+id/boxbars"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:id="@+id/nbars"
-                android:text="@string/nbars"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                />
-        </TableRow>
 
     </TableLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/box"/>
 
     <Button
         android:id="@+id/order"
