--- a/HopeBar/app/src/main/res/layout/activity_main.xml
+++ b/HopeBar/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,19 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:orientation="vertical"
     android:dividerPadding="@dimen/activity_vertical_margin"
-    android:background="#996633">
+    android:background="#96402A">
 
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="About"
         android:id="@+id/about"
-        android:src="@drawable/about"
+        android:src="@drawable/barabout"
         android:onClick="@string/title_activity_about"
         android:layout_weight="1"
-        android:clickable="true" />
+        android:scaleType="fitCenter"
+        android:clickable="true"
+        android:background="#F5A95D"/>
 
     <ImageButton
         android:layout_width="match_parent"
@@ -24,31 +26,39 @@
         android:clickable="false"
         android:text="The Bar"
         android:id="@+id/thebar"
-        android:src="@drawable/thebar"
-        android:layout_weight="1" />
+        android:src="@drawable/barthebar"
+        android:scaleType="fitCenter"
+        android:layout_weight="1"
+        android:background="#F5A95D"/>
 
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Impact"
         android:id="@+id/impact"
-        android:src="@drawable/impact"
-        android:layout_weight="1" />
+        android:src="@drawable/barimpact"
+        android:scaleType="fitCenter"
+        android:layout_weight="1"
+        android:background="#F5A95D"/>
 
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Buy"
         android:id="@+id/buy"
-        android:src="@drawable/share"
-        android:layout_weight="1" />
+        android:src="@drawable/barbuy"
+        android:scaleType="fitCenter"
+        android:layout_weight="1"
+        android:background="#F5A95D"/>
 
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Share"
         android:id="@+id/share"
-        android:src="@drawable/thebar"
-        android:layout_weight="1" />
+        android:src="@drawable/barshare"
+        android:scaleType="fitCenter"
+        android:layout_weight="1"
+        android:background="#F5A95D"/>
 
 </LinearLayout>
