--- a/HopeBar/app/src/main/res/layout/activity_purchase.xml
+++ b/HopeBar/app/src/main/res/layout/activity_purchase.xml
@@ -6,74 +6,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="rachelgully.hopebar.Purchase">
 
-    <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/ll1">
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/tboxes"
-                android:layout_height="wrap_content"
-                android:id="@+id/boxes"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:id="@+id/tboxes"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/total"
-                android:layout_height="wrap_content"
-                android:id="@+id/total"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:id="@+id/tbars"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/happy"
-                android:layout_height="wrap_content"
-                android:id="@+id/happy"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:text="@string/tcost"
-                android:layout_height="wrap_content"
-                android:id="@+id/amount"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:id="@+id/tcost"
-                android:gravity="center"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                />
-        </TableRow>
-        </TableLayout>
-
     <Button
         android:id="@+id/pay"
-        android:layout_below="@id/ll1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text= "@string/pay" />
+        android:text= "@string/pay"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Thank you for your purchase! You have truly been a benifit in the lives of many kids!"
+        android:id="@+id/thanks"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp" />
 
 </RelativeLayout>
