--- a/HopeBar/app/src/main/res/layout/activity_impact.xml
+++ b/HopeBar/app/src/main/res/layout/activity_impact.xml
@@ -6,7 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="rachelgully.hopebar.Impact">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/impact_view"/>
 
 </RelativeLayout>
